objects/SE_Territory__c.object
<CustomObject>
    <fields>
        <fullName>Business__c</fullName>
        <description>DECEMBER RELEASE - Contains the Business unit values</description>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                    <color>#F3D904</color>
                    <label>BD</label>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                    <color>#CC0000</color>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                    <color>#78C953</color>
                    <label>ID</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <color>#FF9900</color>
                    <label>IT</label>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                    <color>#33CCFA</color>
                    <label>PS</label>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>DECEMBER RELEASE - This field is to store the City</description>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DECEMBER RELEASE - Country to which the Territory is related</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DECEMBER RELEASE - State/Province for which the territory is related.</description>
        <label>State/Province</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>StateProvince__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.BypassVR__c</field>
                <operation>equals</operation>
                <value>TRUE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>StateProvince__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_For_ASCO__c</fullName>
        <description>Contains the value ASCO for the records which are being used for ASCO Project Feb 2019 release</description>
        <label>TECH_For_ASCO</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryCode__c</fullName>
        <description>ASCO Project Feb 2019 release</description>
        <label>Territory Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>DECEMBER RELEASE - This field is to store the Zip Code</description>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>AR_Territories</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>StateProvince__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Argentina,Uruguay,Paraguay</value>
        </filters>
        <label>AR Territories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ARArgentina</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_NAM_Territories</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>StateProvince__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>USA</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>US-</value>
        </filters>
        <label>All NAM Territories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_NAM_Territories1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>StateProvince__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>USA,Mexico,Canada</value>
        </filters>
        <label>All NAM Territories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Territories</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>StateProvince__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Territories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Territories1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>StateProvince__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <label>All Territories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_UK_Territories</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>United Kingdom</value>
        </filters>
        <label>All UK Territories</label>
        <language>en_US</language>
        <sharedTo>
            <group>UK_I_Territories</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Australian_Territories</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>City__c</columns>
        <columns>StateProvince__c</columns>
        <columns>ZipCode__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>Australian Territories</label>
        <language>en_US</language>
        <sharedTo>
            <group>PZ_Delegated_Admin_Group</group>
            <roleAndSubordinatesInternal>AU_PTN</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FRANCE_ENERGY</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Country__c</columns>
        <columns>StateProvince__c</columns>
        <columns>ZipCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business__c</field>
            <operation>equals</operation>
            <value>EN,ENERGY</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>FRANCE_ENERGY</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>